--- a/css/styles.css
+++ b/css/styles.css
@@ -2,10 +2,126 @@ body {
     font-size: 18px;
 }
 .Welcome {
-    background-image: url(https://raw.githubusercontent.com/754Bree/Delani-Studio/master/Background/c_image.jpg);
-    width: 100%;
+    background-image: url(https://github.com/jonnygovish/IP3/blob/master/assets/backgrounds/h_img.jpg);
     height: 600px;
+    width: 100%;
     text-align: center;
-    
+    padding-top: 12%;
 }
-    
+.Welcome h3 {
+    padding-top: 15px;
+}
+.Welcome h4 {
+    padding-top: 15px;
+}
+.aboutus {
+    text-align: center;
+    height: 350px;
+    color: black;
+}
+.aboutus h2 {
+    padding-top: 40px;
+}
+.services h2 {
+    background-image: url("https://raw.githubusercontent.com/jonnygovish/IP3/master/assets/backgrounds/s_image.jpg");
+    height: 350px;
+    color: white;
+    text-align: center;
+}
+.services h2 {
+    padding-top: 55px;
+}
+.whatwedo {
+    text-align: center;
+    height: 300px;
+    color: black;
+}
+.whatwedo h2 {
+    padding-top: 30px;
+}
+.toogle {
+    grid-row-start: 4;
+    grid-row-end: 5;
+    padding-top: 3%;
+    text-align: center;
+}
+.text {
+    display: none;
+}
+
+.prfolio {
+    padding-top: 1%;
+    margin-right: 5%;
+    margin-bottom: 5%;
+}
+
+.images {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.overlay {
+    position: absolute;
+    height: 80%;
+    width: 80%;
+    top: 10%;
+    left: 10%;
+    text-align: center;
+    font-size: larger;
+    font-weight: 900;
+    display: none;
+    background: rgba(255, 255, 255, 0.2);
+    color: black;
+    border: 2px solid white;
+}
+
+.portfolio{
+  text-align: center;
+  padding-top: 50px;
+  padding-bottom: 20px;
+}
+
+.contactus{
+  background-image: url("https://raw.githubusercontent.com/jonnygovish/IP3/master/assets/backgrounds/c_image.jpg");
+  height: 420px;
+  text-align: center;
+  color: white;
+  padding-top: 20px;
+}
+
+.footer{
+  text-align: center;
+  padding-top: 20px;
+}
+
+input[type="text"],
+input[type="email"],
+input[type="submit"],
+#message {
+    background-color: transparent;
+    margin-bottom: 20px;
+}
+
+
+#submit {
+  background-color: transparent;
+  border: 1px white;
+  color: white;
+  /* padding-top: px; */
+  padding-bottom: 10px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+
+#mouse {
+    padding-top: 20px;
+    margin-top: 8%;
+    padding-bottom: 20px;
+}
+/* #design{
+  background-image: url("https://raw.githubusercontent.com/jonnygovish/IP3/master/assets/services_icons/design_icon.png");
+  heigh
+} */
