--- a/css/styles.css
+++ b/css/styles.css
@@ -29,15 +29,38 @@ body {
     padding-left: 30%;
     padding-right: 25%;
     align-self: center;
+    justify-content: space-evenly;
+ }
+ .portfolio {
+    justify-content: space-evenly;
+ }
+ .images {
+     width: 100%;
+     height: 100%;
+     margin-bottom: 5%;
+ }
+ .overlay {
+    position: absolute;
+    height: 80%;
+    width: 80%;
+    top: 10%;
+    left: 10%;
+    text-align: center;
+    font-size: larger;
+    font-weight: 900;
+    display: none;
+    background: rgda(255, 255, 2555, 0.2);
+    color: black;
+    border: 2px solid white;
  }
  .row1 {
-    display: flex;
-    padding: 30px;
+     display: flex;
+     justify-content: space-around;
 
  }
 .row2 {
     display: flex;
-    padding: 30px;
+    justify-content: space-around;
 }
 .contact-us {
     background-image: url(https://github.com/jonnygovish/IP3/blob/master/assets/backgrounds/c_image.jpg?raw=true);
