--- a/css/styles.css
+++ b/css/styles.css
@@ -18,151 +18,32 @@ body {
      padding-top: 20px;
  }
  .services {
-    background-image: url(https://github.com/jonnygovish/IP3/blob/master/assets/backgrounds/s_image.jpg?raw=true);
+    background-image: url(https://github.com/jonnygovish/IP3/blob/master/assets/backgrounds/s_image.jpg?raw=true); 
     height: 250px;
     padding-top: 10%;
     color:white;
  }
-
+ 
  .wwd {
     display: flex;
     padding-left: 30%;
     padding-right: 25%;
     align-self: center;
-    justify-content: space-evenly;
- }
- .portfolio {
-    justify-content: space-evenly;
- }
- .images {
-     width: 100%;
-     height: 100%;
-     margin-bottom: 5%;
- }
- .overlay {
-    position: absolute;
-    height: 80%;
-    width: 80%;
-    top: 10%;
-    left: 10%;
-    text-align: center;
-    font-size: larger;
-    font-weight: 900;
-    display: none;
-    background: rgda(255, 255, 2555, 0.2);
-    color: black;
-    border: 2px solid white;
  }
  .row1 {
-     display: flex;
-     justify-content: space-around;
-
+    display: flex;
+    padding: 30px;
+    
  }
 .row2 {
     display: flex;
-    justify-content: space-around;
+    padding: 30px;
 }
 .contact-us {
     background-image: url(https://github.com/jonnygovish/IP3/blob/master/assets/backgrounds/c_image.jpg?raw=true);
     padding-top: 20px; ;
     height: 400px;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /*body {
     text-align: center;
 }
@@ -200,11 +81,11 @@ body {
 .container-portfolio {
     padding-top:  50px;
 
-
+    
 }
 .row-1{
     display:flex ;
-
+    
 }
 .row-2 {
     display: flex;
@@ -239,7 +120,7 @@ body {
 
 
 /*.aboutus {
-
+    
 
 }*/
 
@@ -261,19 +142,16 @@ body {
     font-size: 18px;
 }
 .Welcome {
-    background-image: url(https://raw.githubusercontent.com/jonnygovish/IP3/master/assets/backgrounds/h_img.jpg);
+    background-image: url(https://github.com/jonnygovish/IP3/blob/master/assets/backgrounds/h_img.jpg);
     height: 600px;
     width: 100%;
     text-align: center;
     padding-top: 12%;
-
 }
 .Welcome h3 {
     padding-top: 15px;
-    color: white;
 }
-.Welcome h5 {
-    color: white;
+.Welcome h4 {
     padding-top: 15px;
 }
 .aboutus {
@@ -289,25 +167,19 @@ body {
     height: 350px;
     color: black;
     text-align: center;
-    justify-content: center;
-    padding: 30px;
 }
 .services h2 {
     padding-top: 55px;
 }
-.services p {
-
-    padding-top: 10px;;
-}
-.what-we-do {
+.whatwedo {
     text-align: center;
     height: 300px;
     color: black;
 }
-.what-we-do h2 {
+.whatwedo h2 {
     padding-top: 30px;
 }
-.container-toggle {
+.toogle {
     grid-row-start: 4;
     grid-row-end: 5;
     padding-top: 3%;
