--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,52 @@
-body {
+.container-1 {
+    background-image: url(https://github.com/jonnygovish/IP3/blob/master/assets/backgrounds/h_img.jpg?raw=true);
+    height: 330px;
+    width: fit-content;
+    padding-bottom: 15%;
+    color: black;
+    text-align: center;
+    font-size: large;
+    
+}
+.image {
+    padding-top: 15px;
+    padding-bottom: 5px;
+}
+.container-2 {
+    padding-top: 4.8%;
+    padding-bottom: 4%;
+}
+.container-3 {
+    background-image: url(https://github.com/jonnygovish/IP3/blob/master/assets/backgrounds/s_image.jpg?raw=true);
+    padding-top: 4%;
+    padding-bottom: 4%;
+    color: white;  
+}
+.container-fluid .row {
+    padding-top: 4%;
+    padding-bottom: 2%
+}
+.container-fluid .wwd {
+    display: flex;
+}
+.container-portfolio .row {
+    justify-content: space-between;
+    align-items: center;
+    display: flex;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;    
+
+}
+
+
+
+
+
+
+
+
+
+/*body {
     text-align: center;
     font-size:large ;
     font-family: 'Playfair Display', serif;
@@ -43,7 +91,7 @@ body {
     background-image: url(https://github.com/jonnygovish/IP3/blob/master/assets/backgrounds/c_image.jpg?raw=true);
     padding-top: 20px; ;
     height: 400px;
-}
+}*/
 /*body {
     text-align: center;
 }
